[package]
name = "cmput651project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cmput651py"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "cmput651"
path = "src/main.rs"

[dependencies]
pest = "2.6"
pest_derive = "2.6"
fastrand = "2.0.0"
num-complex = "0.4"
anyhow = "1.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
    "llvm16-0",
] }
colored = "2"
test-case = "3.2.1"
pyo3 = { version = "0.19" }
ndarray = "0.15"
numpy = "0.19"
rayon = "1.7"

[profile.dev]
opt-level = 0          # Optimization level
overflow-checks = true # Disable integer overflow checks.
